# comfyui-modelsearchandload

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md  __init__.py  config.py  dedupe_cache.py  downloader.py  known_models.json  linker.py  lora_trigger_nodes.py  patterns.py  pyproject.toml  scanner.py  separator_compat.py  server.py  sources.py
tools/: find_redundant.py  lora_triggers.py  validate_urls.py
web/: model_downloader.js
workflows/: video_compare_slider.json
